# HisiVdecRtsp

./: CMakeLists.txt  HisiRtsp.cpp  HisiRtsp.h  README.md  RtspImpl.h  Vdec.cpp  Vdec.h  sample_vdec.cpp
source_file/: 1080P.h264
